[tool.poetry]
name = "rca-batch"
version = "0.1.0"
description = ""
authors = ["Hiroki <hiroki11hanada@gmail.com>"]
readme = "README.md"
packages = [{include = "rca_batch"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
boto3 = "^1.28.15"
kubernetes = "^27.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
